fix layout issues for multiple links

--- a/forum/style.css
+++ b/forum/style.css
@@ -3,8 +3,6 @@
     position: fixed;
     bottom: 2rem;
     right: 2rem;
-    display: flex;
-    flex-direction: column;
 
     background-color: #1D1D1D;
     border: 0.1em solid #DE7300;
